--- a/Clase1.ipynb
+++ b/Clase1.ipynb
@@ -266,13 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombre: \"Alexander\" #Ojo Reemplazelo por su nombre\n",
-    "colegio: \"Antonio Baraya\"\n",
-    "grado: 1001"
+    "nombre= \"Alexander\" #Ojo Reemplazelo por su nombre\n",
+    "colegio= \"Antonio Baraya\"\n",
+    "grado= 1001"
    ]
   },
   {
