--- a/Tkinter_1.ipynb
+++ b/Tkinter_1.ipynb
@@ -2,12 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tkinter import *\n"
+    "from tkinter import *\n",
+    "interfaz=Tk()\n",
+    "def calcular():\n",
+    "    res_area.set(lado_mayor.get()*lado_menor.get())\n",
+    "res_area=DoubleVar()\n",
+    "lado_mayor=DoubleVar()\n",
+    "lado_menor=DoubleVar()\n",
+    "interfaz.minsize(width=200, height=200)\n",
+    "interfaz.title('Area del rectangulo')\n",
+    "etiLmayor=Label(interfaz, text='Lado Mayor').pack()\n",
+    "entradaLMayor=Entry(interfaz, textvariable=lado_mayor).pack()\n",
+    "etiLmenor=Label(interfaz, text='Lado Menor').pack()\n",
+    "entradaLMenor=Entry(interfaz, textvariable=lado_menor).pack()\n",
+    "etiArea=Label(interfaz, text='Area').pack()\n",
+    "etiResultado=Label(interfaz, textvariable=res_area).pack()\n",
+    "botonAceptar=Button(interfaz, text='Aceptar', command=calcular).pack()\n",
+    "botonCancelar=Button(interfaz, text='Cancelar', command=interfaz.destroy).pack()\n",
+    "interfaz.mainloop()\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
