--- a/Plan_de_trabajo_2024_programacion_11.ipynb
+++ b/Plan_de_trabajo_2024_programacion_11.ipynb
@@ -114,9 +114,9 @@
     "|         | Landing Pages en NextJS                      | Diseña correctamente una landing page sencilla que incorpora componentes básicos de NextJS como API Routes, Layouts, incluyendo CSS tradicional para presentar un portafolio o sitio personal acorde a los estándares de diseño actuales.         |\n",
     "|         | Disposicion actitudinal y socioemocional     | Manifiesta su compromiso frente a su proyecto de vida a través de su puntualidad y cumplimiento de sus deberes académicos, sus actitudes reflejan un comportamiento socioemocional esperado y acorde a su edad.                                      |\n",
     "| 4       | Sitios estáticos con NextJS                  | Comprende como se articulan los diferentes componentes de NextJS que se emplean para servir desde el diseño Frontend un sitio web estatico definiendo con acierto las funciones principales y rol en la estructura general. |\n",
-    "|         | Diseño y renderizado de un sitio web con NextJS | Integra dentro de un codigo funcional los principales componentes de NextJS  para  visualizar correctamente un sitio web estatico expresando una intención comunicativa clara y que no presenta errores de renderizado.  |\n",
-    "|         | Proyecto final                               |Demuestra a satisfacción los conocimientos adquiridos en la presentación de un proyecto final de programación, expresando en forma clara el problema a resolver y sustentando solidamente  un producto de software como una solución eficaz al mismo.   |\n",
-    "|         | Disposición actitudinal                      | Manifiesta su compromiso frente a su proyecto de vida a través de su puntualidad y cumplimiento de sus deberes académicos. |"
+    "|         | Diseño y renderizado de un sitio web con NextJS | Integra dentro de un codigo funcional los principales componentes de NextJS  para  visualizar correctamente un sitio web estático  que no presenta errores de renderizado y expresa una intención comunicativa clara.  |\n",
+    "|         | Proyecto final                               |Demuestra a satisfacción los conocimientos adquiridos en la presentación de un proyecto final de programación, expresando en forma clara el problema a resolver y sustentando solidamente  un producto de software como una solución realista y eficaz al mismo.   |\n",
+    "|         | Disposición actitudinal                      | Manifiesta su compromiso frente a su proyecto de vida a través de su puntualidad y cumplimiento de sus deberes académicos, sus actitudes reflejan un comportamiento socioemocional esperado y acorde a su edad.|"
    ]
   }
  ],
@@ -136,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.12.1"
   },
   "toc": {
    "base_numbering": 1,
